--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
                 <div class="about">
                     <div class="container">
                         <h3>Localização e informação</h3>
-                        <p>
+                        <p class="cima">
                             O Castelo de Hogwarts está localizado na Escócia, num local desconhecido (no livro Harry Potter e o Prisioneiro de Azkaban é dito que fica perto de Dufftown), próximo da vila de Hogsmeade. Os Muggles (Trouxas, na tradução brasileira) não conseguem nem ver, nem localizar a escola uma vez que esta possui imensos feitiços e encantamentos de proteção, sendo que os Muggles apenas veem ruínas e sinais de aviso para se afastarem.
                         </p>
                         <p>
                             O castelo possui longos terrenos cobertos de relva, um campo de Quidditch (Quadribol, na tradução brasileira), um lago (chamado de O Lago Negro), uma grande e densa floresta (chamada de Floresta Proibida), entre outras construções. O castelo possui também a Torre das Corujas (ou Corujal) que abriga todas as corujas da escola e dos alunos. Existem 142 escadarias no castelo de Hogwarts (ver notas). (A sua movimentação nunca foi descrita nos livros, apenas para as adaptações dos filmes, exceto do último, que seguiu fiel aos livros).
                         </p>
-                        <p>
+                        <p class="baixo">
                             Em Hogwarts não existe eletricidade nem dispositivos eletrónicos à exceção de rádios, que não são alimentados por eletricidade, mas por magia. Além disso, a imensa quantidade de magia presente em Hogwarts faz com que todos os aparelhos elétricos parem de funcionar.
                         </p>
                     </div>
                 </div>
                 <div class="container">
-                    <h3 class="casas">Casas</h3>
+                    <h2 class="casas">Casas</h2>
                     <ul class="container-casas">
                         <li class="Gryffindor">
                             <img src="./img/122034-grifinoiaa-article_2_bd-2.png" alt="Brasão de Gryffindor">
@@ -97,7 +97,7 @@
             <div class="container">
                 <h2>Disciplinas e avaliação</h2>
                 <div class="avali">
-                    <p>
+                    <p class="cima">
                         Em Hogwarts, as disciplinas são divididas em disciplinas obrigatórias e disciplinas opcionais.
                     </p>
                     <p>
@@ -109,7 +109,7 @@
                     <p>
                         No quinto ano, os alunos realizam os NPFs (Níveis Puxados da Feitiçaria), na tradução portuguesa / N.O.M.s (Níveis Ordinários em Magia), na tradução brasileira, de cada disciplina em que estão matriculados. Cada NPF/N.O.M. consiste num exame escrito e, quando aplicável, um exame prático, diante dum grupo de feiticeiros do Ministério da Magia.
                     </p>
-                    <p>
+                    <p class="baixo">
                         Seis semanas depois, os alunos recebem em casa os resultados dos NPFs/N.O.M.s, podendo as notas ser (por ordem decrescente):
                     </p>
                 </div>
@@ -162,5 +162,8 @@
             </div>
         </div>
     </div>
+    <footer>
+        
+    </footer>
 </body>
 </html>
