--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <title>Inscrição para Hogwarts</title>
 </head>
 <body>
-    <div>
-        <header>
+    <header>
             <a href="./index.html"> <h1>Estude em Hogwarts</h1> </a>
             <nav>
                 <ul>
@@ -22,8 +21,10 @@
                 </ul>
             </nav>
         </header>
+    <div class="tudo">
+        
         <div class="sem-header">
-            <h2>Sobre nossa escola</h2>
+            <h2 class="Sobre">Sobre nossa escola</h2>
             <div class="loc-cas">
                 <div class="about">
                     <div class="container">
@@ -163,7 +164,11 @@
         </div>
     </div>
     <footer>
-        
+        <div>
+            <p>
+                &copy Escola de Magia e Bruxaria de Hogwarts - Todos os direitos reservados - 2024
+            </p>
+        </div>
     </footer>
 </body>
 </html>
