--- a/cadastro.html
+++ b/cadastro.html
@@ -62,5 +62,12 @@
             </div>
         </form>
     </div>
+    <footer>
+        <div>
+            <p>
+                &copy Escola de Magia e Bruxaria de Hogwarts - Todos os direitos reservados - 2024
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
